<?xml version="1.0"?>
<package>
  <name>xm_arm_bringup</name>
  <version>0.0.1</version>
  <description>The xm_arm_bringup package provides roslaunch for starting xmbot's arm motion planning and simulation test.</description>

  <maintainer email="myyerrol@126.com">myyerrol</maintainer>

  <license>BSD</license>

  <author email="myyerrol@126.com">myyerrol</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
