<?xml version="1.0"?>
<package>
  <name>xm_arm_description</name>
  <version>0.0.1</version>
  <description>The xm_arm_description package provides a complete 3D model of the xmbot for simulation and visualization. The files in this package are parsed and used by a variety of other components.</description>

  <maintainer email="myyerrol@126.com">myyerrol</maintainer>

  <license>BSD</license>

  <author email="myyerrol@126.com">myyerrol</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

</package>