<?xml version="1.0"?>
<package>
  <name>xm_arm_dynamixel_control</name>
  <version>0.0.1</version>
  <description>The xm_arm_dynamixel_control package can launch and control dynamixel servos.</description>

  <maintainer email="myyerrol@126.com">myyerrol</maintainer>

  <license>BSD</license>

  <author email="myyerrol@126.com">myyerrol</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>arbotix_msgs</build_depend>
  <build_depend>dynamixel_controllers</build_depend>
  <build_depend>dynamixel_driver</build_depend>
  <build_depend>dynamixel_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>arbotix_msgs</run_depend>
  <run_depend>dynamixel_controllers</run_depend>
  <run_depend>dynamixel_driver</run_depend>
  <run_depend>dynamixel_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
