<?xml version="1.0"?>
<package>
  <name>xm_arm_gazebo</name>
  <version>0.0.1</version>
  <description>The xm_arm_gazebo package can launch xmbot in gazebo simulator.</description>

  <maintainer email="myyerrol@126.com">myyerrol</maintainer>

  <license>BSD</license>

  <author email="myyerrol@126.com">myyerrol</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>

  <run_depend>gazebo_ros</run_depend>

</package>
