<?xml version="1.0"?>
<package>
  <name>xm_arm_gazebo_controller_config</name>
  <version>0.0.1</version>
  <description>The xm_arm_gazebo_controller_config package provides controller configuration files for simulating in gazebo.</description>

  <maintainer email="myyerrol@126.com">myyerrol</maintainer>

  <license>BSD</license>

  <author email="myyerrol@126.com">myyerrol</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>

</package>
