<?xml version="1.0"?>
<package>
  <name>xm_arm_hardware_controller_config</name>
  <version>0.0.1</version>
  <description>The xm_arm_hardware_controller_config package provides controller configuration files for controling the arm.</description>

  <maintainer email="myyerrol@126.com">myyerrol</maintainer>

  <license>BSD</license>

  <author email="myyerrol@126.com">myyerrol</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
