<?xml version="1.0"?>
<package>
  <name>xm_arm_hardware_serial_node</name>
  <version>0.0.1</version>
  <description>The xm_arm_hardware_serial_node package provides serial communication between ros and embedded</description>

  <maintainer email="myyerrol@126.com">myyerrol</maintainer>

  <license>BSD</license>

  <author>startar myyerrol</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
