<?xml version="1.0"?>
<package>
  <name>xm_arm_workspace</name>
  <version>0.0.1</version>
  <description>The xm_arm_workspace metapackage contains basic ros packages for modeling, motion control, motion planning and simulation</description>

  <maintainer email="myyerrol@126.com">myyerrol</maintainer>

  <license>BSD</license>

  <author email="myyerrol@126.com">myyerrol</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xm_arm_bringup</run_depend>
  <run_depend>xm_arm_description</run_depend>
  <run_depend>xm_arm_dynamixel_control</run_depend>
  <run_depend>xm_arm_gazebo</run_depend>
  <run_depend>xm_arm_gazebo_controller_config</run_depend>
  <run_depend>xm_arm_gripper_control</run_depend>
  <run_depend>xm_arm_hardware_controller_config</run_depend>
  <run_depend>xm_arm_hardware_serial_node</run_depend>
  <run_depend>xm_arm_moveit_config</run_depend>
  <run_depend>xm_arm_moveit_control</run_depend>
  <run_depend>xm_arm_msgs</run_depend>
  <run_depend>xm_arm_robot_hardware</run_depend>
  <run_depend>xm_arm_teleop</run_depend>
  <run_depend>xm_arm_trajectory_control</run_depend>

</package>
